force-app/main/default/objects/Data_Sources__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Data Sources</relationshipLabel>
    <relationshipName>Data_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>