force-app/main/default/objects/Data_Sources__c/fields/Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Name__c</fullName>
    <label>Handler Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>