force-app/main/default/objects/Data_Sources__c/fields/Inputs__c.field-meta.xml
<CustomField>
    <fullName>Inputs__c</fullName>
    <label>Inputs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>