force-app/main/default/objects/Data_Sources__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>restApi</fullName>
            </value>
            <value>
                <fullName>query</fullName>
            </value>
            <value>
                <fullName>channelName</fullName>
            </value>
            <value>
                <fullName>className</fullName>
            </value>
            <value>
                <fullName>object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>